# protolens

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_zh.md
.cursor/rules/: rust.mdc
benches/: benchmark.rs
c_example/: Makefile  README  simple.c  simple_thread.c  smtp.c
example/: Makefile  ffi.c  simple.c  smtp.c
example/c/: Makefile
example/rust/: Cargo.toml  README
example/rust/src/: capture.rs  flow.rs  main.rs  recognize.rs
examples/: README
examples/src/: capture.rs  flow.rs
imap-proto/src/: lib.rs  types.rs
imap-proto/src/parser/: bodystructure.rs  core.rs  gmail.rs  mod.rs  rfc4551.rs
imap-proto/src/parser/rfc3501/: body.rs  body_structure.rs  mod.rs
protolens/: Cargo.toml
protolens/benches/: benchmark.rs  task.rs
protolens/src/: box_pool.rs  config.rs  enum_map.rs  ffi.rs  heap.rs  lib.rs  packet.rs  pktdata.rs  pktstrm.rs  pool.rs  stats.rs  task.rs  test_utils.rs  util.rs
protolens/src/parser/: bdry.rs  byte.rs  eof.rs  ftpcmd.rs  ftpdata.rs  http.rs  imap.rs  mod.rs  octet.rs  ordpacket.rs  pop3.rs  rawpacket.rs  read.rs  readdash.rs  readline.rs  readline2.rs  readn.rs  readn2.rs  sip.rs  smtp.rs  stream_next.rs  stream_read.rs  stream_readline.rs  stream_readline2.rs  stream_readn.rs  stream_readn2.rs
protolens/src/pool/: box_pool.rs  chunk_pool.rs  mod.rs
protolens/tests/pcap/: ftp_pasv.pcap  imap.pcap  imap_append.pcap  imap_fetch.pcap  imap_fetch_body.pcap  pop3.pcap  sip.pcap
rust_example/: Cargo.toml  README
rust_example/src/: capture.rs  flow.rs  main.rs  recognize.rs
src/: binary_heap.rs  config.rs  dynamic_heap.rs  enum_map.rs  ffi.rs  heap.rs  lib.rs  packet.rs  pktstrm.rs  pool.rs  task.rs  test_utils.rs  util.rs
src/parser/: common.rs  dnstcp.rs  dnsudp.rs  ftpcmd.rs  ftpdata.rs  http.rs  imap.rs  mod.rs  octet.rs  ordpacket.rs  pop3.rs  rawpacket.rs  read.rs  readn.rs  sip.rs  smb.rs  smtp.rs  smtp2.rs  stream_next.rs  stream_read.rs  stream_readline.rs  stream_readline2.rs  stream_readn.rs  stream_readn2.rs  tls.rs
tests/pcap/: dns_tcp.pcap  dns_udp_qa.pcap  http_content.pcap  http_mime.pcap  smb3.pcap  smb_read.txt
tests/res/: smtp.pcap
