[package]
name    = "protolens"
version = "0.1.0"
edition = "2021"

[lib]
name       = "protolens"
crate-type = ["rlib", "cdylib"]

[dependencies]
libc            = "*"
futures         = "0.3.31"
futures-util    = "0.3.31"
futures-channel = "0.3.31"
nom             = "7.1.3"

[dev-dependencies]
pcap       = "2.2.0"
etherparse = "0.13.0"