[package]
name          = "protolens"
version       = "0.2.3"
edition       = "2024"
description   = "TCP stream reassembly，application layer protocol parsing"
documentation = "https://docs.rs/protolens"
keywords      = ["reassembly", "protocol", "parser"]
categories    = ["parsing", "network-programming", "parser-implementations"]
homepage      = "https://github.com/chunhuitrue/protolens"
repository    = "https://github.com/chunhuitrue/protolens"
license       = "MIT/Apache-2.0"
readme        = "README.md"
authors       = ["李春辉 <chunhui_true@163.com>"]

[lib]
name       = "protolens"
crate-type = ["rlib", "cdylib"]

[dependencies]
libc            = "0.2.170"
futures         = "0.3.31"
futures-util    = "0.3.31"
nom             = "7.1.3"
memchr          = "2.7.4"
imapprotolens   = "0.16.6"
byteorder       = "1.5.0"
phf             = { version = "0.11", features = ["macros"] }
pcap            = { version = "2.2.0", optional = true }
etherparse      = { version = "0.13.0", optional = true }
criterion       = { version = "0.5.1", optional = true }
jemallocator    = { version = "0.5.4", optional = true }

[dev-dependencies]
pcap       = "2.2.0"
etherparse = "0.13.0"
ctrlc      = "3.4.2"
tmohash    = "0.1.0"

[features]
bench    = ["dep:criterion", "dep:pcap", "dep:etherparse"]
jemalloc = ["dep:jemallocator"]

[[bench]]
name              = "benchmark"
harness           = false
required-features = ["bench"]

[profile.bench]
debug = true

[profile.release]
lto           = true
codegen-units = 1

[[example]]
name = "protolens_example"
path = "examples/src/main.rs"
