[package]
name    = "protolens"
version = "0.1.0"
edition = "2024"

[lib]
name       = "protolens"
crate-type = ["rlib", "cdylib"]

[dependencies]
libc            = "0.2.170"
futures         = "0.3.31"
futures-util    = "0.3.31"
futures-channel = "0.3.31"
nom             = "7.1.3"
imap-proto = { path = "../imap-proto/", version = "0.16.5"}

[dev-dependencies]
pcap       = "2.2.0"
etherparse = "0.13.0"

[features]
default = ["pkt_buff_128", "read_buff_2048"]

# 缓存pkt的数量
pkt_buff_128 = []
pkt_buff_256 = []
pkt_buff_512 = []
pkt_buff_1024 = []

# 重组读取数据的buff大小
read_buff_512 = []
read_buff_1024 = []
read_buff_2048 = []
