[package]
name    = "protolens"
version = "0.1.0"
edition = "2024"

[lib]
name       = "protolens"
crate-type = ["rlib", "cdylib"]

[dependencies]
libc            = "0.2.170"
futures         = "0.3.31"
futures-util    = "0.3.31"
futures-channel = "0.3.31"
nom             = "7.1.3"
imap-proto      = { path = "../imap-proto/", version = "0.16.5"}

[dev-dependencies]
pcap       = "2.2.0"
etherparse = "0.13.0"
criterion  = "0.5.1"

[[bench]]
name    = "benchmark"
harness = false
