[package]
name    = "protolens"
version = "0.1.0"
edition = "2024"

[lib]
name       = "protolens"
crate-type = ["rlib", "cdylib"]

[dependencies]
libc            = "0.2.170"
futures         = "0.3.31"
futures-util    = "0.3.31"
nom             = "7.1.3"
phf             = { version = "0.11", features = ["macros"] }
imap-proto      = { path = "../imap-proto/", version = "0.16.5"}
pcap            = { version = "2.2.0", optional = true }
etherparse      = { version = "0.13.0", optional = true }
criterion       = { version = "0.5.1", optional = true }

[dev-dependencies]
pcap       = "2.2.0"
etherparse = "0.13.0"

[features]
bench = ["dep:criterion", "dep:pcap", "dep:etherparse"]

[[bench]]
name    = "benchmark"
harness = false
required-features = ["bench"] 